[gd_scene load_steps=12 format=3 uid="uid://d3yx6al2k3um5"]

[ext_resource type="Script" uid="uid://bjy1atkg7oebe" path="res://assets/scripts/shared/movement.gd" id="1_o1tqw"]
[ext_resource type="PackedScene" uid="uid://byyk1a1grgcv2" path="res://assets/hud/hud.tscn" id="2_eoku1"]
[ext_resource type="Script" uid="uid://g87mlfguaeq6" path="res://assets/scripts/player1/build_manager.gd" id="3_855mp"]
[ext_resource type="Script" uid="uid://udxkaq3qfjce" path="res://assets/scripts/shared/resource_manager.gd" id="4_75q7d"]
[ext_resource type="Script" uid="uid://c5bwai6kgn1c2" path="res://assets/scripts/shared/cam_control.gd" id="5_jka67"]
[ext_resource type="Script" uid="uid://bxmqnov0o5684" path="res://assets/scripts/player1/player_manager.gd" id="6_i5arm"]
[ext_resource type="Script" uid="uid://chql2lmkgffde" path="res://assets/scripts/player1/select_manager.gd" id="7_nfk4m"]
[ext_resource type="PackedScene" uid="uid://i7hnb33dov54" path="res://assets/building/scene/forwardoperatingbase.tscn" id="8_66tet"]

[sub_resource type="NavigationMesh" id="NavigationMesh_66tet"]
vertices = PackedVector3Array(-4.2, 0.25, -5, -4, 0.25, -5.1, -4, 0.25, -9.9, -9.9, 0.25, -9.9, -9.9, 0.25, -4.5, -4.2, 0.25, -4.4, -3.8, 0.25, -2.3, -1.3, 0.25, -2.2, -1.2, 0.25, -2.9, -3.8, 0.25, -5, 1.4, 0.25, -2.9, 1.4, 0.25, -9.9, 2.2, 0.25, -2.9, 2.3, 0.25, -2, 9.9, 0.25, -2, 9.9, 0.25, -9.9, -9.9, 0.25, 4.6, -4.2, 0.25, 4.5, -3.8, 0.25, 3.3, -1.3, 0.25, 3.2, 2.3, 0.25, 3, 9.9, 0.25, 3, 2.3, 0.25, 3.8, 2.1, 0.25, 3.9, 2.1, 0.25, 9.9, 9.9, 0.25, 9.9, -1.2, 0.25, 3.9, -3.8, 0.25, 5.1, -4, 0.25, 5.2, -4, 0.25, 9.9, -4.2, 0.25, 5.1, -9.9, 0.25, 9.9)
polygons = [PackedInt32Array(1, 0, 2), PackedInt32Array(2, 0, 3), PackedInt32Array(3, 0, 4), PackedInt32Array(0, 5, 4), PackedInt32Array(7, 6, 8), PackedInt32Array(8, 6, 9), PackedInt32Array(8, 9, 10), PackedInt32Array(10, 9, 2), PackedInt32Array(10, 2, 11), PackedInt32Array(9, 1, 2), PackedInt32Array(12, 10, 11), PackedInt32Array(14, 13, 12), PackedInt32Array(11, 15, 12), PackedInt32Array(12, 15, 14), PackedInt32Array(17, 16, 5), PackedInt32Array(5, 16, 4), PackedInt32Array(19, 18, 7), PackedInt32Array(7, 18, 6), PackedInt32Array(13, 14, 20), PackedInt32Array(20, 14, 21), PackedInt32Array(23, 22, 24), PackedInt32Array(24, 22, 25), PackedInt32Array(25, 22, 21), PackedInt32Array(22, 20, 21), PackedInt32Array(19, 26, 18), PackedInt32Array(18, 26, 27), PackedInt32Array(27, 26, 28), PackedInt32Array(28, 26, 23), PackedInt32Array(28, 23, 29), PackedInt32Array(29, 23, 24), PackedInt32Array(28, 29, 30), PackedInt32Array(30, 29, 31), PackedInt32Array(30, 31, 16), PackedInt32Array(16, 17, 30)]
cell_size = 0.1
cell_height = 0.1
agent_radius = 0.1
agent_max_climb = 0.2

[sub_resource type="CapsuleMesh" id="CapsuleMesh_qxy4w"]

[sub_resource type="BoxShape3D" id="BoxShape3D_i5arm"]
size = Vector3(0.6, 0.6, 0.6)

[node name="grid" type="GridMap"]
cell_size = Vector3(1, 1, 1)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.641681, -0.419996, 0.641754, 0.117208, 0.880609, 0.459119, -0.757963, -0.219389, 0.614297, 5.27733, 3.0469, 13.4208)
sky_mode = 1

[node name="navmesh" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_66tet")

[node name="CSGBox3D" type="CSGBox3D" parent="navmesh"]
transform = Transform3D(20, 0, 0, 0, 0.1, 0, 0, 0, 20, 0, 0, 0)
use_collision = true

[node name="CSGBox3D2" type="CSGBox3D" parent="navmesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 1.5, 0)
size = Vector3(0.1, 3, 10)

[node name="forwardoperatingbase" parent="navmesh" instance=ExtResource("8_66tet")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0.5)

[node name="Player1" type="CharacterBody3D" parent="."]
script = ExtResource("1_o1tqw")

[node name="mesh" type="MeshInstance3D" parent="Player1"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0.3, 0)
visible = false
mesh = SubResource("CapsuleMesh_qxy4w")

[node name="col1" type="CollisionShape3D" parent="Player1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("BoxShape3D_i5arm")

[node name="Cam" type="Camera3D" parent="Player1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0.762021)
current = true

[node name="Player1HUD" type="CanvasLayer" parent="Player1"]

[node name="HUD" parent="Player1/Player1HUD" instance=ExtResource("2_eoku1")]
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="Player1"]

[node name="cam_control" type="Node3D" parent="Player1"]
script = ExtResource("5_jka67")

[node name="build_manager" type="Node" parent="Player1"]
script = ExtResource("3_855mp")

[node name="resource_manager" type="Node" parent="Player1"]
script = ExtResource("4_75q7d")

[node name="player_manager" type="Node" parent="Player1"]
script = ExtResource("6_i5arm")

[node name="select_manager" type="Node" parent="Player1"]
script = ExtResource("7_nfk4m")

[connection signal="timeout" from="Player1/Timer" to="Player1/Player1HUD/HUD" method="_on_timer_timeout"]
